assets/css/_bulma_tweaks.scss
.breadcrumb.is-primary {
  margin-top: 0.5em;
  padding: 0.25rem 0em;
}

.footer.is-primary {
  padding: 1em 0em 1.5em;
}

.section.flash-message {
  padding: 1em 0.5em 0em 0.5em;
}

.section.is-primary {
  padding: 1em 0.5em;
}

